ecommerce-prod/manifest/neo4j.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j
  namespace: ecommerce-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      containers:
      - name: neo4j
        image: neo4j:5.6.0
        ports:
          - containerPort: 7474
          - containerPort: 7687
