ecommerce-prod/manifest/angular-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend
  namespace: ecommerce-prod
spec:
  selector:
    app: ecommerce-frontend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
