ecommerce-prod/manifest/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend
  namespace: ecommerce-prod
spec:
  type: ClusterIP
  selector:
    app: ecommerce-backend
  ports:
    - port: 5000
      targetPort: 5000
