ecommerce-prod/manifest/elastic_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: ecommerce-prod
spec:
  ports:
    - port: 9200
  selector:
    app: elasticsearch
