ecommerce-prod/manifest/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
spec:
  selector:
    app: keycloak
  ports:
  - port: 8090
    targetPort: 8090
