ecommerce-prod/manifest/mongodb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: ecommerce-prod
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
