ecommerce-prod/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ecommerce-prod
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
