ecommerce-prod/manifest/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ecommerce-ingress
#   namespace: ecommerce-prod
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#       if ($http_x_api_key = "") {
#         return 403 '{"error":"API key missing","message":"X-API-KEY header required"}';
#       }
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: ecommerce.local
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: ecommerce-frontend
#             port:
#               number: 80

#   - host: api.ecommerce.local
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: ecommerce-backend
#             port:
#               number: 5000
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-api-ingress
  namespace: ecommerce-prod
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_x_api_key = "") {
        return 403 '{"error":"Authentication Failed","message":"Contact Administrator"}';
      }

      if ($http_x_api_key != "0687462a276c295d03a7d98c387eead1c5c2005a27582c1fd9258437c23bdd60") {
        return 403 '{"error":"Authentication Failed","message":"Contact Administrator"}';
      }
spec:
  ingressClassName: nginx
  rules:
  - host: api.ecommerce.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecommerce-backend
            port:
              number: 5000
